Pull in external dsp crate for fir filters

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ authors = ["Mick Koch <mick@kochm.co>"]
 
 [dependencies]
 collect_slice = "1.0.0"
+dsp = {version = "1.0.0", path = "../dsp"}
+num = "0.1.30"
