Use caret versions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 authors = ["Mick Koch <mick@kochm.co>"]
 
 [dependencies]
-collect_slice = "1.0.0"
-dsp = {version = "1.0.0", path = "../dsp"}
-num = "0.1.30"
-ewma = {version = "1.0.0", path = "../ewma"}
+collect_slice = "^1.0.0"
+dsp = {version = "^1.0.0", path = "../dsp"}
+num = "^0.1.34"
+ewma = {version = "^1.0.0", path = "../ewma"}
