--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Mick Koch <mick@kochm.co>"]
 
 [dependencies]
 collect_slice = "^1.0.0"
-dsp = {version = "^1.0.0", path = "../dsp"}
+static_fir = {version = "^1.0.0", path = "../static_fir"}
 num = "^0.1.34"
 ewma = {version = "^1.0.0", path = "../ewma"}
