--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Mick Koch <mick@kochm.co>"]
 
 [dependencies]
 collect_slice = "^1.1.0"
-static_fir = {version = "^1.0.0", path = "../static_fir"}
+static_fir = {git = "https://github.com/kchmck/static_fir.rs"}
 num = "^0.1.34"
-static_ewma = {version = "^1.0.0", path = "../static_ewma"}
+static_ewma = {git = "https://github.com/kchmck/static_ewma.rs"}
