--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "1.0.0"
 authors = ["Mick Koch <mick@kochm.co>"]
 
 [dependencies]
-collect_slice = "^1.1.0"
-static_fir = {git = "https://github.com/kchmck/static_fir.rs"}
+
+collect_slice = {version = "^1.1.0", path = "../../collect_slice"}
 num = "^0.1.34"
 static_ewma = {git = "https://github.com/kchmck/static_ewma.rs"}
+static_fir = {git = "https://github.com/kchmck/static_fir.rs"}
