--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,10 @@ collect_slice = "1.2.0"
 num = "^0.1.34"
 static_ewma = {git = "https://github.com/kchmck/static_ewma.rs"}
 static_fir = {git = "https://github.com/kchmck/static_fir.rs"}
+
+serde = {version = "0.9.0", optional = true}
+serde_derive = {version = "0.9.0", optional = true}
+
+[features]
+
+ser = ["serde", "serde_derive"]
