--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ authors = ["Mick Koch <mick@kochm.co>"]
 binfield_matrix = "0.1.0"
 cai_cyclic = "0.1.0"
 collect_slice = "1.2.0"
+moving_avg = "0.1.0"
 num = "^0.1.34"
-static_ewma = {git = "https://github.com/kchmck/static_ewma.rs"}
 static_fir = {git = "https://github.com/kchmck/static_fir.rs"}
 
 serde = {version = "0.9.0", optional = true}
