--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ cai_cyclic = "0.1.0"
 collect_slice = "1.2.0"
 moving_avg = "0.1.0"
 num = "^0.1.34"
-static_fir = {git = "https://github.com/kchmck/static_fir.rs"}
+static_fir = "0.2.0"
 
 serde = {version = "0.9.0", optional = true}
 serde_derive = {version = "0.9.0", optional = true}
