--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Mick Koch <mick@kochm.co>"]
 
 [dependencies]
 
+binfield_matrix = "0.1.0"
 collect_slice = "1.2.0"
 num = "^0.1.34"
 static_ewma = {git = "https://github.com/kchmck/static_ewma.rs"}
