--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ binfield_matrix = "0.1.0"
 cai_cyclic = "0.1.0"
 collect_slice = "1.2.0"
 moving_avg = "0.1.0"
-num = "^0.1.34"
+num = "0.1.34"
 static_fir = "0.2.0"
 
 serde = {version = "0.9.0", optional = true}
