--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,12 @@ authors = ["Mick Koch <mick@kochm.co>"]
 
 [dependencies]
 
-binfield_matrix = "0.1.0"
-cai_cyclic = "0.1.0"
-cai_golay = "0.1.0"
+binfield_matrix = "0.2.0"
+cai_cyclic = "0.1.2"
+cai_golay = "0.1.1"
 collect_slice = "1.2.0"
-moving_avg = "0.1.0"
-num = "0.1.34"
+moving_avg = "0.2.0"
+num-traits = "0.2.0"
 static_fir = "0.2.0"
 
 serde = {version = "0.9.0", optional = true}
